--- a/front-end/src/componets/Header/Header.module.scss
+++ b/front-end/src/componets/Header/Header.module.scss
@@ -40,4 +40,49 @@
 
     }
   }
+  @media (max-width: 700px) {
+    .container {
+      display: none;
+    }
+  }
+}
+@media (max-width: 700px) {
+  .header {
+    width: 100%;
+    height: 63px;
+    border-bottom: solid #dfdfdf 7px;
+  }
+}
+//mobile
+
+.mob__container{
+  display: none;
+}
+@media (max-width: 700px) {
+  .mob__container{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    .block__one{
+      position: relative;
+      //width: 55px;
+      //height: 55px;
+      .x{
+        position: absolute;
+        top: 30%;
+        left: 35%;
+      }
+    }
+    .block__two{
+      margin-right: 15px;
+      position: relative;
+      //width: 100px;
+      .phone{
+        position: absolute;
+        top: 8px;
+        right: 70px;
+      }
+    }
+  }
 }
