--- a/front-end/src/componets/Menu/Menu.module.scss
+++ b/front-end/src/componets/Menu/Menu.module.scss
@@ -16,13 +16,16 @@
     color: rgb(243, 243, 243);
     //text-transform: uppercase;
     align-items: center;
-    padding: 15px;
+    //padding: 15px;
     line-height: 1.2;
 
     li {
       width: min-content;
+      height: 100%;
       display: flex;
-      img{
+      padding: 15px;
+
+      img {
         padding-right: 5px;
       }
     }
