--- a/front-end/src/componets/Nav/Nav.module.scss
+++ b/front-end/src/componets/Nav/Nav.module.scss
@@ -138,3 +138,42 @@
   ;
   }
 }
+
+@media (max-width: 700px) {
+  .container {
+    display: none;
+  }
+}
+
+//mobile
+
+.mob__container {
+  display: none;
+  width: 100%;
+}
+
+@media (max-width: 700px) {
+  .mob__container {
+    display: block;
+   .block__two, .block__one {
+      width: 100%;
+      text-align: left;
+      padding: 15px;
+      border-bottom: #dfdfdf solid 1px;
+      position: relative;
+
+      img {
+        padding: 2px 18px 0 8px;
+      }
+
+      select {
+        appearance: none;
+      }
+      .arrow{
+        position: absolute;
+        right: 0;
+      }
+    }
+
+  }
+}
