--- a/front-end/src/style/App.scss
+++ b/front-end/src/style/App.scss
@@ -1,12 +1,15 @@
 @import './nullStyle.scss';
 
+//body { padding: 0 calc(20px - (100vw - 100%)) 0 0; }
+html {
+  overflow-x: scroll;
+  margin-right: calc(-1 * (100vw - 100%));
+}
 .App {
   min-height: 100vh;
-  overflow: hidden;
+  //overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
-  //.container{
-  //  width: 955px;
-  //}
+  //body { padding: 0 calc(20px - (100vw - 100%)) 0 0; }
 }
