--- a/front-end/src/componets/Menu/MenuItems/MenuItems.module.scss
+++ b/front-end/src/componets/Menu/MenuItems/MenuItems.module.scss
@@ -1,6 +1,10 @@
-.items{
+.items {
   height: 100%;
-.container{
-  width: 955px;
-}
+
+  .container {
+    width: 955px;
+        text-align: center;
+    font-weight: bold;
+    padding: 50px;
+  }
 }
