--- a/front-end/src/componets/CatalogList/CatalogList.module.scss
+++ b/front-end/src/componets/CatalogList/CatalogList.module.scss
@@ -1,6 +1,17 @@
-.container{
+.container {
   width: 955px;
   display: flex;
   flex-wrap: wrap;
   margin-top: 20px;
+  justify-content: center;
+}
+@media (max-width: 950px) {
+  .container {
+   width: 100%;
+  }
+}
+@media (max-width: 700px) {
+  .container {
+    display: none;
+  }
 }
