--- a/front-end/src/componets/Header/Header.module.scss
+++ b/front-end/src/componets/Header/Header.module.scss
@@ -28,24 +28,38 @@
       span {
         display: inline-block;
         vertical-align: middle;
+        cursor: pointer;
       }
     }
 
     .header__region {
 
-        font-size: 14px;
-        font-family: "Roboto";
-        color: rgb(152, 152, 152);
-        border-bottom: 1px  rgb(152, 152, 152) dashed;
-
+      font-size: 14px;
+      font-family: "Roboto";
+      color: rgb(152, 152, 152);
+      border-bottom: 1px rgb(152, 152, 152) dashed;
+      cursor: pointer;
     }
   }
+
   @media (max-width: 700px) {
     .container {
       display: none;
     }
   }
 }
+
+@media (max-width: 980px) {
+  .header {
+    width: 100%;
+    height: 50px;
+
+    .container {
+      width: 100%;
+    }
+  }
+}
+
 @media (max-width: 700px) {
   .header {
     width: 100%;
@@ -53,32 +67,36 @@
     border-bottom: solid #dfdfdf 7px;
   }
 }
+
 //mobile
 
-.mob__container{
+.mob__container {
   display: none;
 }
+
 @media (max-width: 700px) {
-  .mob__container{
+  .mob__container {
     display: flex;
     width: 100%;
     justify-content: space-between;
     align-items: center;
-    .block__one{
+
+    .block__one {
       position: relative;
       //width: 55px;
       //height: 55px;
-      .x{
+      .x {
         position: absolute;
         top: 30%;
         left: 35%;
       }
     }
-    .block__two{
+
+    .block__two {
       margin-right: 15px;
       position: relative;
       //width: 100px;
-      .phone{
+      .phone {
         position: absolute;
         top: 8px;
         right: 70px;
