--- a/front-end/src/componets/Menu/Menu.module.scss
+++ b/front-end/src/componets/Menu/Menu.module.scss
@@ -26,6 +26,7 @@
       display: flex;
       padding: 15px;
       align-items: center;
+      cursor: pointer;
 
       img {
         padding-right: 5px;
@@ -38,7 +39,24 @@
       display: none;
     }
   }
+  @media (max-width: 1060px) {
+    .container {
+      width: 100%;
+
+      .menu__list {
+        width: 100%;
+        font-size: 10px;
+
+        li {
+          padding: 0px;
+          //width: auto;
+        }
+      }
+
+    }
+  }
 }
+
 
 @media (max-width: 700px) {
   .menu {
